DietPi-LetsEncrypt | Minor code and error handling improvements, as well increasing transparancy of what the script is currently doing: https://github.com/Fourdee/DietPi/pull/1738
PREP | G_HW_MODEL: Added for 'OrangePi PC Plus'. Many thanks to @SuBLiNeR: https://github.com/Fourdee/DietPi/pull/1704

Bug Fixes:
General | Remote SCP/Rsync fix when running under 'dietpi' user: https://github.com/Fourdee/DietPi/issues/1703
DietPi-Config | RPi onboard sound: Resolved an issue where changing from 3.5mm output back to auto, would not have any effect.
DietPi-Config | Resolved an error when selecting 'Sample Rate' CPU option.
DietPi-Drive_Manager | Resolved issues with incorrect detection of drives and mounts on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1748
DietPi-Drive_Manager | Resolved issues RootFS transfer being stuck in a endless rsync loop: https://github.com/Fourdee/DietPi/issues/1748
DietPi-Justboom | ALSA must now be installed, and /etc/asound.conf must exist, before this application can be run.
DietPi-Software | Pi-SPC: PATH fix for sds.sh.
DietPi-Software | WiringPi: Now installed to '$HOME/WiringPi', previously this would be wiringPi-HEAD-8d188fa.
DietPi-Software | XRDP: Resolved an issue with blue screen running under Xorg. VNC4 is now installed by default, and the new connection method is 'Xvnc': https://github.com/Fourdee/DietPi/issues/1727#issuecomment-383858979
DietPi-Software | AmiBerry: Fix for standard boot SDL2 keyboard leaking to background. Please note fast boot is still affected by the SDL2 keyboard leak: https://github.com/Fourdee/DietPi/issues/1707
DietPi-LetsEncrypt | Now skips any webserver configuration edit, if CertBot execution returns with error: https://dietpi.com/phpbb/viewtopic.php?f=11&t=1909

Allo GUI v7:
- Resolved errors with swapfile display/change.
- Resolved issues with CPU gov not being correctly applied.

-----------------------------------------------------------------------------------------------------------
