@@ -1443,7 +1443,31 @@ else
 
 fi
 
-cat << _EOF_1 | fdisk \$TARGET_DEV
+#Rock64 GPT resize | modified version of ayufan-rock64 resize script. I take no credit for this.
+if [[ -f /etc/.dietpi_hw_model_identifier ]] && (( $(/etc/.dietpi_hw_model_identifier) == 43 )); then
+
+    gdisk \$TARGET_DEV << _EOF_1
+x
+e
+m
+d
+\$TARGET_PARTITION
+n
+\$TARGET_PARTITION
+
+
+8300
+c
+\$TARGET_PARTITION
+root
+w
+Y
+_EOF_1
+
+#Everything else
+else
+
+    cat << _EOF_1 | fdisk \$TARGET_DEV
 p
 d
 \$TARGET_PARTITION
@@ -1457,32 +1481,14 @@ w
 
 _EOF_1
 
+fi
+
 partprobe \$TARGET_DEV
 
 resize2fs \${TARGET_DEV}p\$TARGET_PARTITION
 
 _EOF_
 	G_RUN_CMD chmod +x /var/lib/dietpi/fs_partition_resize.sh
-
-	#Rock64 GPT resize
-	# if (( $G_HW_MODEL == 43 )); then
-		# gdisk $TARGET_DEV << _EOF_1
-# x
-# e
-# m
-# d
-# $TARGET_PARTITION
-# n
-# $TARGET_PARTITION
-
-
-# 8300
-# c
-# $TARGET_PARTITION
-# root
-# w
-# Y
-# _EOF_1
 
 
 	# - BBB remove fsexpansion: https://github.com/Fourdee/DietPi/issues/931#issuecomment-345451529
