@@ -24,6 +24,7 @@ DietPi-Software | Docker: Enabled for ARMv8 devices: https://github.com/Fourdee/
 DietPi-LetsEncrypt | Lighttpd: SSL configuration upgrade according to Mozillas SSL generator: https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=lighttpd-1.4.35&openssl=1.0.1t&hsts=yes&profile=intermediate
 DietPi-LetsEncrypt | Minor code and error handling improvements, as well increasing transparancy of what the script is currently doing: https://github.com/Fourdee/DietPi/pull/1738
 PREP | G_HW_MODEL: Added for 'OrangePi PC Plus'. Many thanks to @SuBLiNeR: https://github.com/Fourdee/DietPi/pull/1704
+PREP | Optimized rootfs re-parition and resize. This will reduced the required intial system reboot count by one. Will take affect from official v6.8 DietPi images and onwards.
 
 Bug Fixes:
 General | Remote SCP/Rsync fix when running under 'dietpi' user: https://github.com/Fourdee/DietPi/issues/1703
